fixed layout issue in boxes

--- a/modules/com.alkacon.opencms.v8.template3/resources/system/modules/com.alkacon.opencms.v8.template3/resources/css/style.css
+++ b/modules/com.alkacon.opencms.v8.template3/resources/system/modules/com.alkacon.opencms.v8.template3/resources/css/style.css
@@ -346,7 +346,7 @@
      font-size: 11px;
    }
    
-   .boxbody p, .boxbody div.paragraph, .boxbody a {
+   .boxbody p, .boxbody div, .boxbody a {
      font-size: 11px;
    }
    
